# gazelle-idempotency-bug

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod
cmd/hello/: BUILD.bazel  main.go
gazelletest/: BUILD.bazel  gazelletest_test.go
proto/example/: example.proto
