"""
A bazel module for the https://github.com/gonzojive/heatpump project.
"""

module(
    name = "github-gonzojive-gazelle-idempotency-bug",
    version = "0.0.1",
    compatibility_level = 1,
)

bazel_dep(
    name = "protobuf",
    version = "27.1",
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "grpc",
    version = "1.65.0",
    repo_name = "com_github_grpc_grpc",
)
bazel_dep(
    name = "rules_proto",
    version = "6.0.2",
)
bazel_dep(
    name = "rules_go",
    version = "0.51.0",
    repo_name = "io_bazel_rules_go",
)

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution platforms.
go_sdk.download(version = "1.22.10")

bazel_dep(
    name = "gazelle",
    version = "0.40.0",
    repo_name = "bazel_gazelle",
)

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_dgraph_io_badger_v3",
    "com_github_go_oauth2_oauth2_v4",
    "com_github_goburrow_modbus",
    "com_github_goburrow_serial",
    "com_github_golang_glog",
    "com_github_golang_protobuf",
    "com_github_google_go_cmp",
    "com_github_google_go_containerregistry",
    "com_github_howeyc_crc16",
    "com_github_inhies_go_bytesize",
    "com_github_johnsiilver_golib",
    "com_github_martinlindhe_unit",
    "com_github_rmrobinson_google_smart_home_action_go",
    "com_github_samber_lo",
    "com_github_stretchr_testify",
    "com_github_teambition_rrule_go",
    "com_github_yuin_goldmark",
    "com_google_cloud_go_firestore",
    "com_google_cloud_go_pubsub",
    "com_google_cloud_go_secretmanager",
    "org_golang_google_api",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_crypto",
    "org_golang_x_net",
    "org_golang_x_oauth2",
    "org_golang_x_sync",
    "org_uber_go_fx",
    "org_uber_go_multierr",
    "org_uber_go_zap",
)
go_deps.gazelle_override(
    directives = [
        #"gazelle:build_file_proto_mode disable_global",
        "gazelle:proto disable",
    ],
    path = "github.com/dgraph-io/badger/v3",
)
go_deps.gazelle_override(
    directives = [
        "gazelle:proto disable",
    ],
    path = "google.golang.org/grpc",
)