"""
A bazel module for the https://github.com/gonzojive/heatpump project.
"""

module(
    name = "github-gonzojive-gazelle-idempotency-bug",
    version = "0.0.1",
    compatibility_level = 1,
)

bazel_dep(
    name = "protobuf",
    version = "27.1",
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "grpc",
    version = "1.65.0",
    repo_name = "com_github_grpc_grpc",
)
bazel_dep(
    name = "rules_proto",
    version = "6.0.2",
)
bazel_dep(
    name = "rules_go",
    version = "0.51.0",
    repo_name = "io_bazel_rules_go",
)

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution platforms.
go_sdk.download(version = "1.22.10")

bazel_dep(
    name = "gazelle",
    version = "0.40.0",
    repo_name = "bazel_gazelle",
)

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_google_go_cmp",
    "com_github_sergi_go_diff",
)
go_deps.gazelle_override(
    directives = [
        "gazelle:proto disable",
    ],
    path = "google.golang.org/grpc",
)
